Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Sacas_Multiplicacao__c.field-meta.xml
<CustomField>
    <fullName>Sacas_Multiplicacao__c</fullName>
    <formula>Quantidade_Basica__c + CASE(Tipo_de_Necesidad__c,&quot;Multiplicação&quot;,Quantity,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sacas Multiplicação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>