Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Sacas_Pagadas__c.field-meta.xml
<CustomField>
    <fullName>Sacas_Pagadas__c</fullName>
    <formula>IF(Opportunity.RecordTypeId = &apos;01240000000M7M0&apos;,  Semente_bruta__c , Quantity * Opportunity.Porc_Pagado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sacas Pagadas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>