Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Sem_Bruta_Anexo_II__c.field-meta.xml
<CustomField>
    <fullName>Sem_Bruta_Anexo_II__c</fullName>
    <description>IF(Opportunity.RecordTypeId = &apos;01240000000M7M0&apos;, Semente_bruta__c, IF(Opportunity.RecordTypeId = &apos;01240000000M7P4&apos;, Sem_Rebajada__c-Semente_bruta__c,0))</description>
    <formula>IF(Opportunity.RecordTypeId = &apos;01240000000M7M0&apos;, Semente_bruta__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sem. Bruta Anexo II</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>