Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Sem_Bruta_Anexo_III__c.field-meta.xml
<CustomField>
    <fullName>Sem_Bruta_Anexo_III__c</fullName>
    <formula>IF(Opportunity.RecordTypeId = &apos;01240000000M7y6&apos;, Semente_bruta__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sem. Bruta Anexo III</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>