Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Sem_Rebajada__c.field-meta.xml
<CustomField>
    <fullName>Sem_Rebajada__c</fullName>
    <label>Sem. Rebaixada (Sacas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>