Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Semente_beneficiada__c.field-meta.xml
<CustomField>
    <fullName>Semente_beneficiada__c</fullName>
    <label>Sem. Beneficiada (Sacas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>