Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Semente_uso_propio__c.field-meta.xml
<CustomField>
    <fullName>Semente_uso_propio__c</fullName>
    <label>Sem. Uso Próprio (Sacas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>