Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Tipo_Registro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Registro__c</fullName>
    <label>Tipo Registro</label>
    <length>80</length>
    <type>Text</type>
</CustomField>