Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/TMP_Observaciones__c.field-meta.xml
<CustomField>
    <fullName>TMP_Observaciones__c</fullName>
    <label>TMP Observaciones</label>
    <length>200</length>
    <type>Text</type>
</CustomField>