Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Toneladas_Autorizadas__c.field-meta.xml
<CustomField>
    <fullName>Toneladas_Autorizadas__c</fullName>
    <label>Toneladas Autorizadas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>