Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Total_do_quarto_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Total_do_quarto_pagamento__c</fullName>
    <formula>UnitPrice * Kg_de_produto__c * Opportunity.Taxa_de_quarto_pagamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total do quarto pagamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>