Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Total_Faturado__c.field-meta.xml
<CustomField>
    <fullName>Total_Faturado__c</fullName>
    <formula>IF(Opportunity.RecordType.Name=&quot;CVB Autorizada&quot;,(Quantity - Bls_devolucion__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Faturado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>