Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Total_SAP_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Total_SAP_Estimado__c</fullName>
    <formula>ROUND(Precio_SAP_Estimado__c / (1 -  (Tasas__c/100)),2) *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SAP Estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>