Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Total_sugerido__c.field-meta.xml
<CustomField>
    <fullName>Total_sugerido__c</fullName>
    <formula>Total_do_primeiro_pagamento_sugerido__c + 
Total_do_segundo_pagamento_sugerido__c + 
Total_do_terceiro_pagamento_sugerido__c + 
Total_do_quarto_pagamento_sugerido__c + 
Total_do_quinto_pagamento_sugerido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total sugerido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>