Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Tratamento__c.field-meta.xml
<CustomField>
    <fullName>Tratamento__c</fullName>
    <label>Tratamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Embalagem__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Tratamentos</valueSetName>
    </valueSet>
</CustomField>