Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Tratamiento_de_Semilla__c.field-meta.xml
<CustomField>
    <fullName>Tratamiento_de_Semilla__c</fullName>
    <description>En este campo se indica el tratamiento de semilla.</description>
    <label>Tratamento de Sementes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T00 - Sem</fullName>
                <default>true</default>
                <label>T00 - Sem</label>
            </value>
            <value>
                <fullName>T05 - Cruiser+Maxim+Amulet</fullName>
            </value>
            <value>
                <fullName>T06 - Cruiser+Maxim+Amulet+Co-Mo</fullName>
            </value>
            <value>
                <fullName>T07 - Maxim XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>