Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/UNIDADE__c.field-meta.xml
<CustomField>
    <fullName>UNIDADE__c</fullName>
    <formula>PricebookEntry.Product2.UNIDADE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidade</label>
    <type>Text</type>
</CustomField>