Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Unidade_Reembalagem__c.field-meta.xml
<CustomField>
    <fullName>Unidade_Reembalagem__c</fullName>
    <label>Unidade Reembalagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>