Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Valor_antecipado__c.field-meta.xml
<CustomField>
    <fullName>Valor_antecipado__c</fullName>
    <label>Valor antecipado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>