Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Variedad_de_Produto__c.field-meta.xml
<CustomField>
    <fullName>Variedad_de_Produto__c</fullName>
    <formula>PricebookEntry.Product2.Variedade__r.Nombre_de_Registro__c</formula>
    <label>Registro Cultivar</label>
    <type>Text</type>
</CustomField>