Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/VL_Liquido_Copia__c.field-meta.xml
<CustomField>
    <fullName>VL_Liquido_Copia__c</fullName>
    <label>VL Liquido Copia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>