Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Vol_Autor_AnexoI__c.field-meta.xml
<CustomField>
    <fullName>Vol_Autor_AnexoI__c</fullName>
    <defaultValue>0</defaultValue>
    <description>En las Opp de Control de Stock este campo se completa con la cantidad autoriazada en el Anexo I para la variedad en cuestión.</description>
    <label>Vol Autor AnexoI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>