Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/Volumen_Aut_Comercializacion__c.field-meta.xml
<CustomField>
    <fullName>Volumen_Aut_Comercializacion__c</fullName>
    <label>Volume Aut. Comercialização</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>