Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/WERKS__c.field-meta.xml
<CustomField>
    <fullName>WERKS__c</fullName>
    <description>Centro de despacho</description>
    <label>_WERKS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>