Salesforce/main/default/main/default/objects/OpportunityLineItem/fields/ZZPOSSF__c.field-meta.xml
<CustomField>
    <fullName>ZZPOSSF__c</fullName>
    <label>_ZZPOSSF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>