Salesforce/main/default/main/default/objects/OpportunityLineItem/validationRules/No_Mod_Sem_Uso_Rel_Venda_Facturado.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Mod_Sem_Uso_Rel_Venda_Facturado</fullName>
    <active>true</active>
    <errorConditionFormula>AND((PRIORVALUE( Semente_uso_propio__c) &lt;&gt; Semente_uso_propio__c),  ISPICKVAL(Estado_Facturacion__c,&quot;Facturado&quot;))</errorConditionFormula>
    <errorDisplayField>Semente_uso_propio__c</errorDisplayField>
    <errorMessage>No se puede modificar este valor si el relatorio ha sido facturado</errorMessage>
</ValidationRule>