Salesforce/main/default/main/default/objects/OpportunityLineItem/validationRules/PB_Comercial_Multiplo_de_50.validationRule-meta.xml
<ValidationRule>
    <fullName>PB_Comercial_Multiplo_de_50</fullName>
    <active>false</active>
    <description>Valida que los Comerciales ingresen cantidades que sean múltiplo de 50</description>
    <errorConditionFormula>AND( Opportunity.RecordTypeId = &apos;01240000000MAR3&apos;, MOD( Quantidade__c ,50)  &lt;&gt;  0)</errorConditionFormula>
    <errorDisplayField>Quantidade__c</errorDisplayField>
    <errorMessage>As quantidades tem que ser múltiplo de 50.</errorMessage>
</ValidationRule>